# vulkan-triangle

./: .gitignore  CMakeLists.txt  Makefile.linux.mak  README.md  build.bat  build.sh
app/: triangle
src/: defines.h  main.c  triangle.c  window.h
src/containers/: rexarray.c  rexarray.h
src/core/: asserts.h  events.c  events.h  logger.c
src/platform/: platform.h  win32.c
src/platform/linux/: platform_wayland.c  platform_wayland.h  xdg-shell-client-protocol.h  xdg-shell-protocol.c
src/platform/win32/: platform_win32.c  platform_win32.h
